--- a/src/content/docs/template-syntax/bind.mdx
+++ b/src/content/docs/template-syntax/bind.mdx
@@ -224,11 +224,10 @@ Svelte создаёт обработчик событий, который обн
 - [`volume`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/volume)
 - [`muted`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/muted)
 
-...и семь только для чтения:
+...и шесть только для чтения:
 
 - [`duration`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/duration)
 - [`buffered`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/buffered)
-- [`paused`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/paused)
 - [`seekable`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/seekable)
 - [`seeking`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/seeking_event)
 - [`ended`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLMediaElement/ended)
@@ -240,7 +239,7 @@ Svelte создаёт обработчик событий, который обн
 
 ## `<video>`
 
-Элементы `<video>` имеют все те же привязки, что и элементы [audio](#audio), плюс привязки только для чтения [`videoWidth`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLVideoElement/videoWidth) и [`videoHeight`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLVideoElement/videoHeight).
+Элементы `<video>` имеют все те же привязки, что и элементы [`<audio>`](#audio), плюс привязки только для чтения [`videoWidth`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLVideoElement/videoWidth) и [`videoHeight`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLVideoElement/videoHeight).
 
 ## `<img>`
 
