--- a/src/content/docs/runes/props.mdx
+++ b/src/content/docs/runes/props.mdx
@@ -369,4 +369,28 @@ let { a, b, c, ...others } = $props();
 </script>
 ```
 
+:::note
+Интерфейсы для нативных DOM-элементов предоставляются в модуле `svelte/elements` (см. [Типизация обёрток компонентов](/misc/typescript#типизация-обёрток-компонентов)).
+:::
+
 Рекомендуется добавлять типы, так как это подскажет пользователям вашего компонента, какие пропсы они должны предоставить.
+
+## `$props.id()`
+
+Эта руна, появившаяся в версии 5.20.0, создаёт уникальный идентификатор для конкретного экземпляра компонента. При гидратации серверного рендеринга значение сохраняется как на сервере, так и на клиенте.
+
+Это особенно удобно для связывания элементов с помощью атрибутов, таких как `for` и `aria-labelledby`.
+
+```svelte
+<script>
+  const uid = $props.id();
+</script>
+
+<form>
+  <label for="{uid}-firstname">First Name: </label>
+  <input id="{uid}-firstname" type="text" />
+
+  <label for="{uid}-lastname">Last Name: </label>
+  <input id="{uid}-lastname" type="text" />
+</form>
+```
