Add origin links

--- a/src/content/docs/introduction/getting-started.mdx
+++ b/src/content/docs/introduction/getting-started.mdx
@@ -1,5 +1,6 @@
 ---
 title: Первые шаги
+origin: https://svelte.dev/docs/svelte/getting-started
 ---
 
 Мы рекомендуем использовать [SvelteKit](https://svelte.dev/docs/kit), официальный фреймворк для разработки приложений от команды Svelte, основанный на [Vite](https://vite.dev/):
