--- a/src/content/docs/introduction/svelte-files.mdx
+++ b/src/content/docs/introduction/svelte-files.mdx
@@ -1,5 +1,6 @@
 ---
 title: Файлы .svelte
+origin: https://svelte.dev/docs/svelte/svelte-files
 ---
 
 Компоненты являются строительными блоками приложений Svelte. Они пишутся в файлах с расширением `.svelte`, используя расширенный HTML.
