--- a/src/content/docs/learning.mdx
+++ b/src/content/docs/learning.mdx
@@ -1,6 +1,7 @@
 ---
 title: Обучающие статьи и ролики
 description: Список полезных русскоязычных ресурсов о фреймворке Svelte
+origin: https://github.com/dragomano/svelte-russian/blob/main/src/content/docs/learning.mdx?plain=1
 ---
 
 import { ShowcaseText, ShowcaseYouTube } from 'starlight-showcases'
