--- a/src/content/docs/runtime/context.mdx
+++ b/src/content/docs/runtime/context.mdx
@@ -45,7 +45,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 Однако у этого подхода есть несколько недостатков:
 
 - он безопасно работает только в случае, если ваше глобальное состояние используется исключительно на стороне клиента — например, когда вы создаете одностраничное приложение, которое не рендерит компоненты на сервере. Если ваше состояние управляется и обновляется на сервере, оно может быть общим для нескольких сессий и/или пользователей, что приведет к ошибкам.
-- это может создать ложное впечатление, что определённое состояние является глобальным, хотя на самом деле оно должно использоваться только в определённой части приложения.
+- это может создать ложное впечатление, что определённое состояние является глобальным, хотя на самом деле его следует использовать только в определённой части приложения.
 
 Чтобы решить эти проблемы, Svelte предоставляет несколько примитивов `context`, которые помогают их устранить.
 
