--- a/src/content/docs/template-syntax/animate.mdx
+++ b/src/content/docs/template-syntax/animate.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 14
 ---
 
-Анимация запускается, когда содержимое [блока each с привязкой по ключам](../each/#блоки-each-с-привязкой-по-ключам) переупорядочивается. Анимации не выполняются, когда элемент добавляется или удаляется, а только когда индекс существующего элемента данных в блоке `each` изменяется. Директивы анимации должны находиться на элементе, который является _непосредственным_ потомком блока `each` с привязкой по ключам.
+Анимация запускается, когда содержимое [блока each с привязкой по ключам](/template-syntax/each/#блоки-each-с-привязкой-по-ключам) переупорядочивается. Анимации не выполняются, когда элемент добавляется или удаляется, а только когда индекс существующего элемента данных в блоке `each` изменяется. Директивы анимации должны находиться на элементе, который является _непосредственным_ потомком блока `each` с привязкой по ключам.
 
 Анимации могут использоваться с [встроенными функциями анимации Svelte](https://svelte.dev/docs/svelte/svelte-animate) или [пользовательскими функциями анимации](#пользовательские-функции-анимации).
 
