--- a/src/content/docs/misc/testing.mdx
+++ b/src/content/docs/misc/testing.mdx
@@ -19,9 +19,9 @@ import { PackageManagers } from 'starlight-package-managers';
 
 Затем настройте ваш `vite.config.js`:
 
-```js
+```js "'vitest/config'"
 // vite.config.js
-import { defineConfig } from +++'vitest/config'+++;
+import { defineConfig } from 'vitest/config';
 
 export default defineConfig({
   // ...
