--- a/src/content/docs/introduction/getting-started.mdx
+++ b/src/content/docs/introduction/getting-started.mdx
@@ -34,7 +34,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   </TabItem>
 </Tabs>
 
-Не беспокойтесь, если вы ещё не знакомы с Svelte! Вы можете игнорировать все замечательные функции, которые SvelteKit предлагает на данный момент, и вернуться к ним позже.
+Не беспокойтесь, если вы ещё не знакомы со Svelte! Вы можете игнорировать все замечательные функции, которые SvelteKit предлагает на данный момент, и вернуться к ним позже.
 
 ## Альтернативы SvelteKit
 
@@ -44,14 +44,14 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 Vite часто используется в автономном режиме для сборки [одностраничных приложений (SPA)](https://svelte.dev/docs/kit/glossary#SPA), которые также можно [создавать с помощью SvelteKit](https://svelte.dev/docs/kit/single-page-apps).
 :::
 
-Существуют также плагины для [Rollup](https://github.com/sveltejs/rollup-plugin-svelte), [Webpack](https://github.com/sveltejs/svelte-loader) [и нескольких других](https://sveltesociety.dev/packages?category=build-plugins), но мы рекомендуем Vite.
+Существуют также плагины для [Rollup](https://github.com/sveltejs/rollup-plugin-svelte), [Webpack](https://github.com/sveltejs/svelte-loader) [и некоторых других сборщиков](https://sveltesociety.dev/packages?category=build-plugins), но мы рекомендуем Vite.
 
 ## Инструменты для редакторов
 
 Команда Svelte поддерживает [расширение для VS Code](https://marketplace.visualstudio.com/items?itemName=svelte.svelte-vscode), а также существуют интеграции с различными другими [редакторами](https://sveltesociety.dev/resources#editor-support) и инструментами.
 
-Вы также можете проверить свой код из командной строки, используя [sv check](https://github.com/sveltejs/cli).
+Вы можете проверять свой код из командной строки, используя [sv check](https://github.com/sveltejs/cli).
 
 ## Получение помощи
 
-Не стесняйтесь просить помощи в [чате Discord](https://svelte.dev/chat)! Вы также можете найти ответы на [Stack Overflow](https://stackoverflow.com/questions/tagged/svelte).
+Не стесняйтесь просить помощи в [чате Discord](https://svelte.dev/chat)! Или попробуйте найти ответы на [Stack Overflow](https://stackoverflow.com/questions/tagged/svelte).
