--- a/src/content/docs/learning.mdx
+++ b/src/content/docs/learning.mdx
@@ -15,6 +15,11 @@ import { ShowcaseText, ShowcaseYouTube } from 'starlight-showcases'
       title: 'Svelte Docs [English]',
       description: 'Официальная документация',
     },
+    {
+      href: 'https://github.com/ronsen/laravel-svelte-starter',
+      title: 'laravel-svelte-starter',
+      description: 'Стартовый шаблон с использованием Laravel и Svelte',
+    },
   ]}
 />
 
@@ -35,6 +40,11 @@ import { ShowcaseText, ShowcaseYouTube } from 'starlight-showcases'
       href: 'https://www.youtube.com/watch?v=8DQailPy3q8',
       title: 'Svelte 5 Basics [English]',
       description: 'Complete Svelte 5 Course for Beginners',
+    },
+    {
+      href: 'https://www.youtube.com/watch?v=U1mqI9QfcCo',
+      title: 'Svelte 5 и его руны - быстрый старт!',
+      description: 'Знакомимся с фреймворком Svelte и делаем на нем небольшое приложение, используя основные инструменты для разработки - руны пропсов, стейта и эффектов.',
     },
   ]}
 />
