--- a/src/content/docs/reference/runtime-warnings.mdx
+++ b/src/content/docs/reference/runtime-warnings.mdx
@@ -174,7 +174,7 @@ Tried to unmount a component that was not mounted
 ### ownership_invalid_binding
 
 ```
-%parent% passed a value to %child% with `bind:`, but the value is owned by %owner%. Consider creating a binding between %owner% and %parent%
+%parent% passed property `%prop%` to %child% with `bind:`, but its parent component %owner% did not declare `%prop%` as a binding. Consider creating a binding between %owner% and %parent% (e.g. `bind:%prop%={...}` instead of `%prop%={...}`)
 ```
 
 Рассмотрим три компонента: `GrandParent`, `Parent` и `Child`. Если вы используете `<GrandParent bind:value>`, внутри `GrandParent` передаёте переменную через `<Parent {value} />` (обратите внимание на отсутствие `bind:`), а затем используете `<Child bind:value>` внутри `Parent`, то будет вызвано это предупреждение.
@@ -184,11 +184,7 @@ Tried to unmount a component that was not mounted
 ### ownership_invalid_mutation
 
 ```
-Mutating a value outside the component that created it is strongly discouraged. Consider passing values to child components with `bind:`, or use a callback instead
-```
-
-```
-%component% mutated a value owned by %owner%. This is strongly discouraged. Consider passing values to child components with `bind:`, or use a callback instead
+Mutating unbound props (`%name%`, at %location%) is strongly discouraged. Consider using `bind:%prop%={...}` in %parent% (or using a callback) instead
 ```
 
 Рассмотрим следующий код:
