--- a/src/content/docs/runes/props.mdx
+++ b/src/content/docs/runes/props.mdx
@@ -84,7 +84,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 
 ## Значения по умолчанию
 
-Деструктуризация позволяет нам объявлять значения по умолчанию, которые используются, если родительский компонент не устанавливает данный пропс:
+Деструктуризация позволяет нам объявлять значения по умолчанию, которые используются, если родительский компонент не устанавливает данный пропс (или значение `undefined`):
 
 ```js
 let { adjective = 'happy' } = $props();
