--- a/src/content/docs/introduction/getting-started.mdx
+++ b/src/content/docs/introduction/getting-started.mdx
@@ -3,7 +3,7 @@ title: Первые шаги
 origin: https://svelte.dev/docs/svelte/getting-started
 ---
 
-Мы рекомендуем использовать [SvelteKit](https://svelte.dev/docs/kit), который позволяет [создавать практически что угодно](https://svelte.dev/docs/kit/project-types). Это официальный фреймворк для разработки приложений от команды Svelte, работающий на базе [Vite](https://vite.dev/). Создайте новый проект с помощью команды:
+Мы рекомендуем использовать [SvelteKit](/kit/getting-started/introduction), который позволяет [создавать практически что угодно](/kit/getting-started/project-types). Это официальный фреймворк для разработки приложений от команды Svelte, работающий на базе [Vite](https://dragomano.github.io/vite-docs/). Создайте новый проект с помощью команды:
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
