--- a/src/content/docs/reference/runtime-errors.mdx
+++ b/src/content/docs/reference/runtime-errors.mdx
@@ -256,6 +256,43 @@ A snippet function was passed invalid arguments. Snippets should only be instant
 <button onclick={handleClick}>нажми меня</button>
 ```
 
+### snippet_without_render_tag
+
+```
+Attempted to render a snippet without a `{@render}` block. This would cause the snippet code to be stringified instead of its content being rendered to the DOM. To fix this, change `{snippet}` to `{@render snippet()}`.
+```
+
+Вот как может выглядеть компонент, вызывающий эту ошибку (при этом `children` не отображается):
+
+```svelte
+<script>
+  let { children } = $props();
+</script>
+
+{children}
+```
+
+...или так (родительский компонент передаёт сниппет, хотя ожидается не сниппет):
+
+```svelte
+// Parent.svelte
+<ChildComponent>
+  {#snippet label()}
+    <span>Привет!</span>
+  {/snippet}
+</ChildComponent>
+```
+
+```svelte
+// Child.svelte
+<script>
+  let { label } = $props();
+</script>
+
+<!-- Этот компонент не ожидает сниппет, но родительский компонент предоставил его -->
+<p>{label}</p>
+```
+
 ### store_invalid_shape
 
 ```
