--- a/src/content/docs/cli/commands/sv-check.mdx
+++ b/src/content/docs/cli/commands/sv-check.mdx
@@ -183,10 +183,10 @@ const prop`","code":"unused-export-let","source":"svelte"}
 
 ## Благодарности
 
-Инструмент Vue [VTI](https://github.com/vuejs/vetur/tree/master/vti), который лег в основу ёsvelte-checkё
+Инструмент Vue [VTI](https://github.com/vuejs/vetur/tree/master/vti), который лег в основу `svelte-check`
 
 ## Часто задаваемые вопросы и ответы
 
 ### Почему нет опции для проверки отдельных файлов (например, только изменённых)?
 
-`svelte-check` требует полного обзора проекта для корректной работы. Например, если переименовать пропс компонента, но не обновить его использования — эти места станут ошибками, но они будут пропущены при проверке только изменённых файлов.
+`svelte-check` требует полного обзора проекта для корректной работы. Например, если переименовать проп компонента, но не обновить все места его использования — эти места станут ошибками, но они будут пропущены при проверке только изменённых файлов.
