--- a/src/content/docs/runes/bindable.mdx
+++ b/src/content/docs/runes/bindable.mdx
@@ -15,7 +15,7 @@ sidebar:
 Изменение также возможно с обычными пропсами, но настоятельно не рекомендуется — Svelte предупредит вас, если обнаружит, что компонент изменяет состояние, которое ему не «принадлежит».
 :::
 
-Чтобы пометить пропс как привязываемый, мы используем руну `$bindable`:
+Чтобы пометить проп как привязываемый, мы используем руну `$bindable`:
 
 import { Tabs, TabItem } from '@astrojs/starlight/components';
 
@@ -70,9 +70,9 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 <p>{message}</p>
 ```
 
-Родительский компонент не _обязан_ использовать `bind:` — он может просто передать обычный пропс. Некоторые родительские компоненты не хотят слушать, что их потомки имеют в виду.
+Родительский компонент не _обязан_ использовать `bind:` — он может просто передать обычный проп. Некоторые родительские компоненты не хотят слушать, что их потомки имеют в виду.
 
-В этом случае вы можете указать значение по умолчанию для случая, когда пропс вообще не передан:
+В этом случае вы можете указать значение по умолчанию для случая, когда проп вообще не передан:
 
 ```js
 // FancyInput.svelte
